hphp/test/zend/good/Zend/tests/constants/fixtures/folder3/fixture.php
<?hh

function folder3_fixture() {
echo __DIR__ . "\n";
 echo dirname(__FILE__) . "\n";
}
