hphp/test/zend/bad/zend/errmsg_020.php
<?php

phpinfo();

echo "Done\n";
?>